Fixed meta description

--- a/metamedapp.html
+++ b/metamedapp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>MetaMedAPP</title>
-    <meta name="description" content="Case study page of Project" />
+    <meta name="description" content="MetaMed ~ a convenient and efficient way for users to access and purchase their necessary medications." />
 
     <link rel="stylesheet" href="css/style.css" />
 
