--- a/zoey.html
+++ b/zoey.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Zoey</title>
-    <meta name="description" content="Case study page of Project" />
+    <meta name="description" content="Zoey ~ Facilitating Book Exchanges at Local Rates Amidst Economic Challenges" />
 
     <link rel="stylesheet" href="css/style.css" />
 
