--- a/gregoireabichaker.html
+++ b/gregoireabichaker.html
@@ -85,14 +85,14 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Distancia</h1>
+        <h1 class="heading-primary">Gregoire Abi Chaker</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Bridging Educational Gaps with Innovative Web Solutions During COVID-19, Awarded First Place by LAU in 2021!
+            Developed a website for Dr. Gregoire Abi Chaker, a forensic doctor in Lithuania, focusing on SEO to enhance visibility. The website successfully attracted clients who discovered Dr. Abi Chaker online. 
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://edudistancia.herokuapp.com" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://www.teismomedicina.lt/en" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -101,7 +101,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/distancia.png"
+              src="./assets/png/gregoireabichaker.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -110,41 +110,34 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                The COVID-19 pandemic presented unprecedented challenges to the education system, with schools and universities closing their doors and transitioning to online learning. In this time of crisis, "Distancia" was born as a solution to facilitate the educational environment between students and teachers. Developed by Selim Ellieh and Theo Khalil, two coding passionates, "Distancia" is a web platform that provides students with a means of communication with their teachers, access to course materials, and the ability to stay on top of homework assignments.
-              </p>
-              <p class="project-details__desc-para">
-                The motivation behind "Distancia" was to provide a comprehensive and convenient learning platform for students and teachers during a time of uncertainty and change. In 2021, Distancia won the first place in a web development contest by the Lebanese American University. This platform could be considered as an attempt to create a modern, secure and free open-source alternative to other platforms like BlackBoard and Moodle.
-              </p>
+                The project involved creating an online presence for Dr. Gregoire Abi Chaker, a renowned forensic doctor based in Lithuania. The primary objective was to design a website that not only highlighted Dr. Abi Chaker's expertise in forensic medicine but also ensured high visibility through effective search engine optimization (SEO). By prioritizing SEO, the website significantly increased Dr. Abi Chaker's online visibility, attracting a substantial number of clients who discovered his services through internet searches.
+             </p>
+             <p class="project-details__desc-para">
+
+                Additionally, the website was designed with language localization capabilities, offering content in both English and Lithuanian. This feature was particularly important in catering to Lithuania's diverse population and international clients seeking forensic medical services. The bilingual nature of the site not only broadened its accessibility but also enhanced user experience, reflecting Dr. Abi Chaker's commitment to serving a wide range of clients. Overall, the website successfully positioned Dr. Gregoire Abi Chaker as a key player in the field of forensic medicine in Lithuania, while also reaching an international audience.
+             </p>
+         
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
+                <div class="skills__skill">SEO</div>
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">Node.js</div>
-                <div class="skills__skill">Express.js</div>
-                <div class="skills__skill">MongoDB</div>
-                <div class="skills__skill">Mongoose</div>
-                <div class="skills__skill">Socket.IO</div>
-  
+                <div class="skills__skill">Next.Js</div>
+                <div class="skills__skill">Responsive Design</div>
+                <div class="skills__skill">Localization</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
-              <a
-              href="https://edudistancia.herokuapp.com"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="https://github.com/selimellieh72/Distancia"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link</a
-              >
+                <a
+                href="https://www.teismomedicina.lt/en"
+                    class="btn btn--med btn--theme project-details__links-btn"
+                    target="_blank"
+                    >Live Link</a
+                >
+        
             </div>
           </div>
         </div>
@@ -203,3 +196,5 @@
     <script src="./index.js"></script>
   </body>
 </html>
+
+
