--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h1 class="heading-primary">Hey, My name is Selim Ellieh</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Bringing Your Vision to Life with My Expert Full-Stack Development Skills, Tailoring Unique App Solutions Just for You!
+            Bringing Your Vision to Life with My Expert Full-Stack Development and Data Science Skills, Tailoring Unique App Solutions and Machine Learning Strategies Just for You!"
           </p>
         </div>
         <div class="home-hero__cta">
@@ -164,6 +164,8 @@
             <div class="skills">
               <div class="skills__skill">Flutter</div>
               <div class="skills__skill">Python</div>
+              <div class="skills__skill">Scikit-Learn</div>
+              <div class="skills__skill">Tensorflow</div>
               <div class="skills__skill">Solidity</div>
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
@@ -187,12 +189,11 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
-          <span class="heading-sec__sub">
-            Empowering, Innovating, Developing: My Projects Speak Every Language!
-          </span>
+   
         </h2>
 
         <div class="projects__content">
+          
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
@@ -209,6 +210,118 @@
               </p>
               <a
                 href="./distancia.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >More Details</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/gregoireabichaker.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Dr. Gregoire Abi Chaker</h3>
+              <p class="projects__row-content-desc">
+                Developed a website for Dr. Gregoire Abi Chaker, a forensic doctor in Lithuania, focusing on SEO to enhance visibility. The website successfully attracted clients who discovered Dr. Abi Chaker online. 
+
+              </p>
+              <a
+                href="./gregoireabichaker.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >More Details</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/styrate.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Styrate</h3>
+              <p class="projects__row-content-desc">
+                Beta sign-up page for an American Startup that landed multiple potential users
+
+              </p>
+              <a
+                href="./styrate.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >More Details</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/tictactoeweb.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">TicTacToeWeb</h3>
+              <p class="projects__row-content-desc">
+                A MiniMax Algorithm-Based Game. Built with HTML, CSS, and Javascript, challenge an AI that ensures a draw or victory. Playable online and easily cloned from GitHub.
+              </p>
+              <a
+                href="./tictactoeweb.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >More Details</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/network.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Network</h3>
+              <p class="projects__row-content-desc">
+                A Dynamic Django-Powered Social Media App. Features user authentication, seamless CSS animations, and interactive post functionality. 
+              </p>
+              <a
+                href="./network.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >More Details</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/twitterhashtagscrapper.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Twitter Hashtag Scrapper</h3>
+              <p class="projects__row-content-desc">
+                Custom Python Script for Efficient Hashtag Analysis. Initially a client project, now open-sourced for broader use.
+              </p>
+              <a
+                href="./twitterhashtagscrapper.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >More Details</a
@@ -267,11 +380,12 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Your Dream Project Awaits - Let’s Build It Together!
+            Your Dream Project Awaits - Let’s Build It Together!<br>
+            <em>Contact me at:</em> <strong>selim.cod4r@gmail.com</strong>
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form action="mailto:selim.cod4r@gmail.com" method="post" enctype="text/plain" class="contact__form">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
