--- a/styrate.html
+++ b/styrate.html
@@ -85,14 +85,14 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Distancia</h1>
+        <h1 class="heading-primary">Styrate</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Bridging Educational Gaps with Innovative Web Solutions During COVID-19, Awarded First Place by LAU in 2021!
+            Beta sign-up page for an American Startup that landed multiple potential users
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://edudistancia.herokuapp.com" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://styrate.herokuapp.com" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -101,7 +101,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/distancia.png"
+              src="./assets/png/styrate.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -110,11 +110,14 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                The COVID-19 pandemic presented unprecedented challenges to the education system, with schools and universities closing their doors and transitioning to online learning. In this time of crisis, "Distancia" was born as a solution to facilitate the educational environment between students and teachers. Developed by Selim Ellieh and Theo Khalil, two coding passionates, "Distancia" is a web platform that provides students with a means of communication with their teachers, access to course materials, and the ability to stay on top of homework assignments.
-              </p>
-              <p class="project-details__desc-para">
-                The motivation behind "Distancia" was to provide a comprehensive and convenient learning platform for students and teachers during a time of uncertainty and change. In 2021, Distancia won the first place in a web development contest by the Lebanese American University. This platform could be considered as an attempt to create a modern, secure and free open-source alternative to other platforms like BlackBoard and Moodle.
-              </p>
+                The beta sign-up page for the American startup represents a notable advancement in the field of digital marketing. This startup has developed a platform primarily aimed at connecting influencers with products, with a focus on affiliate marketing and product endorsements. The platform is designed to be user-friendly, enabling influencers to easily find and recommend products that align with their interests and audience.
+
+             </p>
+             <p class="project-details__desc-para">
+
+                The positive response to the beta sign-up page indicates a strong market interest in this kind of platform. It successfully addresses the needs of both influencers and brands in the digital marketing landscape. The platform's approach to facilitating authentic and relevant product endorsements is expected to bring a fresh perspective to affiliate marketing, potentially leading to more effective and meaningful marketing strategies in the digital space.
+             </p>
+         
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
@@ -122,29 +125,19 @@
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">Node.js</div>
-                <div class="skills__skill">Express.js</div>
-                <div class="skills__skill">MongoDB</div>
-                <div class="skills__skill">Mongoose</div>
-                <div class="skills__skill">Socket.IO</div>
-  
+                <div class="skills__skill">Responsive Design</div>
+                <div class="skills__skill">Integration with mail</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
-              <a
-              href="https://edudistancia.herokuapp.com"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="https://github.com/selimellieh72/Distancia"
-                class="btn btn--med btn--theme-inv project-details__links-btn"
-                target="_blank"
-                >Code Link</a
-              >
+                <a
+                href="https://styrate.herokuapp.com"
+                    class="btn btn--med btn--theme project-details__links-btn"
+                    target="_blank"
+                    >Live Link</a
+                >
+        
             </div>
           </div>
         </div>
@@ -203,3 +196,5 @@
     <script src="./index.js"></script>
   </body>
 </html>
+
+
