--- a/tictactoeweb.html
+++ b/tictactoeweb.html
@@ -85,14 +85,14 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Distancia</h1>
+        <h1 class="heading-primary">TicTacToeWeb</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Bridging Educational Gaps with Innovative Web Solutions During COVID-19, Awarded First Place by LAU in 2021!
+            A MiniMax Algorithm-Based Game. Built with HTML, CSS, and Javascript, challenge an AI that ensures a draw or victory. Playable online and easily cloned from GitHub.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://edudistancia.herokuapp.com" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://selimellieh72.github.io/TicTacToeWeb/" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -101,7 +101,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/distancia.png"
+              src="./assets/png/tictactoeweb.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -110,11 +110,9 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                The COVID-19 pandemic presented unprecedented challenges to the education system, with schools and universities closing their doors and transitioning to online learning. In this time of crisis, "Distancia" was born as a solution to facilitate the educational environment between students and teachers. Developed by Selim Ellieh and Theo Khalil, two coding passionates, "Distancia" is a web platform that provides students with a means of communication with their teachers, access to course materials, and the ability to stay on top of homework assignments.
-              </p>
-              <p class="project-details__desc-para">
-                The motivation behind "Distancia" was to provide a comprehensive and convenient learning platform for students and teachers during a time of uncertainty and change. In 2021, Distancia won the first place in a web development contest by the Lebanese American University. This platform could be considered as an attempt to create a modern, secure and free open-source alternative to other platforms like BlackBoard and Moodle.
-              </p>
+                Experience the ultimate challenge in TicTacToe with our website, powered by the sophisticated MiniMax algorithm. Developed using the core web technologies of HTML, CSS, and vanilla Javascript, this game pits you against an unbeatable AI, offering a thrilling experience for both beginners and TicTacToe enthusiasts. Whether you're playing for fun or to sharpen your strategic skills, our AI ensures that the game will always result in either a draw or a loss - a win against it is impossible!
+             </p>
+         
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
@@ -122,25 +120,19 @@
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">Node.js</div>
-                <div class="skills__skill">Express.js</div>
-                <div class="skills__skill">MongoDB</div>
-                <div class="skills__skill">Mongoose</div>
-                <div class="skills__skill">Socket.IO</div>
-  
+                <div class="skills__skill">MiniMax</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
+                <a
+                href="https://selimellieh72.github.io/TicTacToeWeb/"
+                    class="btn btn--med btn--theme project-details__links-btn"
+                    target="_blank"
+                    >Live Link</a
+                >
               <a
-              href="https://edudistancia.herokuapp.com"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="https://github.com/selimellieh72/Distancia"
+                href="https://github.com/selimellieh72/TicTacToeWeb/tree/main"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
