--- a/twitterhashtagscrapper.html
+++ b/twitterhashtagscrapper.html
@@ -85,14 +85,14 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Distancia</h1>
+        <h1 class="heading-primary">Twitter Hashtag Scrapper</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Bridging Educational Gaps with Innovative Web Solutions During COVID-19, Awarded First Place by LAU in 2021!
+            Custom Python Script for Efficient Hashtag Analysis. Initially a client project, now open-sourced for broader use.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://edudistancia.herokuapp.com" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://github.com/selimellieh72/TwitterHashtagScrapper" class="btn btn--bg" target="_blank">Code Link</a>
         </div>
       </div>
     </section>
@@ -101,7 +101,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/distancia.png"
+              src="./assets/png/twitterhashtagscrapper.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -110,37 +110,30 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                The COVID-19 pandemic presented unprecedented challenges to the education system, with schools and universities closing their doors and transitioning to online learning. In this time of crisis, "Distancia" was born as a solution to facilitate the educational environment between students and teachers. Developed by Selim Ellieh and Theo Khalil, two coding passionates, "Distancia" is a web platform that provides students with a means of communication with their teachers, access to course materials, and the ability to stay on top of homework assignments.
+                In the ever-evolving landscape of social media, understanding public sentiment has become crucial. The 'TwitterHashtagScrapper' addresses this need with precision. This powerful Python script, initially tailored for a specific client, enables the scraping of a vast array of tweets linked to any chosen hashtag. Its versatility lies in its configurability and customization options, making it an indispensable tool for data analysts and marketers seeking to gauge public opinion and trends through Twitter.
+
+             </p>
+              <p class="project-details__desc-para">
+                The genesis of 'TwitterHashtagScrapper' was driven by a desire to offer a robust, user-friendly solution for social media analytics. Recognizing its potential beyond a single client’s needs, I decided to transition this project to open source, allowing it to evolve with contributions from the global developer community. This decision reflects a commitment not only to technological innovation but also to fostering a collaborative spirit in software development.
               </p>
               <p class="project-details__desc-para">
-                The motivation behind "Distancia" was to provide a comprehensive and convenient learning platform for students and teachers during a time of uncertainty and change. In 2021, Distancia won the first place in a web development contest by the Lebanese American University. This platform could be considered as an attempt to create a modern, secure and free open-source alternative to other platforms like BlackBoard and Moodle.
+                With its user-centric design and adaptability, 'TwitterHashtagScrapper' stands as a testament to the power of Python in handling complex data extraction tasks effortlessly. It's more than a script; it's a gateway to unlocking the wealth of insights hidden within social media conversations.
+
               </p>
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">Node.js</div>
-                <div class="skills__skill">Express.js</div>
-                <div class="skills__skill">MongoDB</div>
-                <div class="skills__skill">Mongoose</div>
-                <div class="skills__skill">Socket.IO</div>
-  
+                <div class="skills__skill">Python</div>
+                <div class="skills__skill">Selenium</div>
+             
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
+           
               <a
-              href="https://edudistancia.herokuapp.com"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <a
-                href="https://github.com/selimellieh72/Distancia"
+                href="https://github.com/selimellieh72/TwitterHashtagScrapper"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
