--- a/index.html
+++ b/index.html
@@ -265,6 +265,28 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="./assets/png/WineMetrics.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">WineMetrics</h3>
+              <p class="projects__row-content-desc">
+                WineMetrics is a Python-based machine learning project that predicts wine quality through a custom-built multiple linear regression model. Developed entirely from scratch, this project showcases the implementation of batch gradient descent to learn model weights and biases.
+              </p>
+              <a
+                href="./winemetrics.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >More Details</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/png/tictactoeweb.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
