--- a/index.html
+++ b/index.html
@@ -490,10 +490,9 @@
           </div>
         </div>
 
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
           &copy; Copyright 2023. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
+          <a rel="noreferrer" target="_blank" href="https://selimellieh72.github.io"
             >Selim Ellieh</a
           >
         </div>
