--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Selim Ellieh</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <meta name="description" content="Selim Ellieh ~ Full Stack Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -24,7 +24,7 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/jpeg/selim-ellieh.jpeg"
-              alt="Ram Maheshwari Logo Image"
+              alt="Selim Ellieh Logo Image"
               class="header__logo-img"
             />
           </div>
