--- a/twitterhashtagscrapper.html
+++ b/twitterhashtagscrapper.html
@@ -24,7 +24,7 @@
           <div class="header__logo-img-cont">
             <img
              src="./assets/jpeg/selim-ellieh.jpeg"
-              alt="Ram Maheshwari Logo Image"
+              alt="Selim Ellieh Logo Image"
               class="header__logo-img"
             />
           </div>
