--- a/index.html
+++ b/index.html
@@ -265,6 +265,28 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="./assets/png/supermarket_sales_analytics.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Supermarket Sales Analytics</h3>
+              <p class="projects__row-content-desc">
+                Supermarket Sales Analytics utilizes machine learning to predict retail sales and uncover key business insights from supermarket data.
+              </p>
+              <a
+                href="./supermarket_sales_analytics.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >More Details</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/png/WineMetrics.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
