--- a/twitterhashtagscrapper.html
+++ b/twitterhashtagscrapper.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Distancia</title>
+    <title>Twitter Hashtag Scrapper</title>
   <meta name="description" content="Distancia ~ Bridging Educational Gaps with Innovative Web Solutions" />
 
     <link rel="stylesheet" href="css/style.css" />
